# BE-AI-TUTOR

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.agent/rules/: Project Rules.md
.claude/agents/: architect-reviewer.md  architecture-reviewer.md  cover-review.md  rails-expert.md  ux-ui-tester.md
.claude/rules/: FastAPI Best Practices.md  Project Structure.md  Tech Stack.md
alembic/: env.py
app/: main.py
app/api/: routes.py
notebooks/analyzes/: 00-MASTER-OVERVIEW.md  02-DATABASE-DESIGN.md  03-API-DESIGN.md  06-SECURITY.md  07-CODE-STRUCTURE.md
notebooks/analyzes-be/: 00-MASTER-OVERVIEW.md  01-BUSINESS-MODEL.md  02-DATABASE-DESIGN.md  03-CODE-STRUCTURE.md  04-API-DESIGN.md  05-AUTH-DESIGN.md  06-AI-CHAT-FLOW.md  06-AI-SERVICES-FLOW.md  07-SECURITY.md  08-USER-FLOWS.md  09-DEPENDENCIES-GUIDE.md
notebooks/analyzes-fe/: 00-FE-OVERVIEW.md  00-quick-reference.md  01-UI-SPECIFICATION.md  01-project-overview.md  02-COMPONENTS.md  02-feature-analysis.md  03-ROUTING.md  03-ui-components.md  04-CODE-STRUCTURE.md  04-api-design.md  05-STITCH-PROMPTS.md  05-routing-structure.md  06-source-code-structure.md  07-api-documentation.md  08-ui-components-documentation.md
notebooks/flow-spec/: 00-INDEX.md  01-AUTH-SPEC.md  02-COURSES-SPEC.md  02-DOCUMENTS-SPEC.md  03-LESSONS-SPEC.md  03-QUIZ-SPEC.md  04-FLASHCARDS-SPEC.md  04-QUIZ-SPEC.md  05-AI-SERVICES-SPEC.md  05-FLASHCARDS-SPEC.md  (+13 more)
src/: main.py
tests/: conftest.py  test_health.py
(+27 files in other folders)
